--- a/TraderBuddy/src/components/Header/header.css
+++ b/TraderBuddy/src/components/Header/header.css
@@ -1,19 +1,48 @@
 .header {
+  margin: 10px;
   display: flex;
   justify-content: space-between;
-  background-color: #383636;
   color: white;
 
   .AppName {
     font-size: large;
-
     span {
-      font-size: 25px;
+      font-size: 20px;
       font-weight: bold;
       background: linear-gradient(to right, #f97316, #ef4444);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
 
     }
+  }
+}
+
+.buttons {
+  margin-right: 25px;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 20px;
+  border-radius: 8px;
+  cursor: pointer;
+  width: 200px;
+  height: 60px;
+
+  .loginBtn {
+    width: 350px;
+    color: white;
+    background: #1F2229;
+    border: none;
+    border-radius: 10px;
+    font-size: 15px;
+    font-weight: bold;
+  }
+
+  .signupBtn {
+    border-radius: 10px;
+    width: 350px;
+    font-size: 15px;
+    border: none;
+    font-weight: bold;
+    background: linear-gradient(to right, #FF782C, #CE2D14);
   }
 }
