--- a/TraderBuddy/src/components/Header/header.css
+++ b/TraderBuddy/src/components/Header/header.css
@@ -2,9 +2,11 @@
   margin: 10px;
   display: flex;
   justify-content: space-between;
+  
   color: white;
 
   .AppName {
+    margin-left: 20px;
     font-size: large;
     span {
       font-size: 20px;
@@ -20,12 +22,13 @@
 .buttons {
   margin-right: 25px;
   display: flex;
+  background-color: #1F2229;
   justify-content: space-between;
-  padding: 10px 20px;
+  /* padding: 10px 20px; */
   border-radius: 8px;
   cursor: pointer;
   width: 200px;
-  height: 60px;
+  height: 40px;
 
   .loginBtn {
     width: 350px;
