--- a/TraderBuddy/src/components/Header/header.css
+++ b/TraderBuddy/src/components/Header/header.css
@@ -2,7 +2,6 @@
   margin: 10px;
   display: flex;
   justify-content: space-between;
-  
   color: white;
 
   .AppName {
@@ -48,4 +47,12 @@
     font-weight: bold;
     background: linear-gradient(to right, #FF782C, #CE2D14);
   }
+}
+
+@media only screen and (max-width:700px){
+  .header {
+    flex-direction: column;
+    align-items: center;
+  }
+
 }
