--- a/TraderBuddy/src/components/Header/header.css
+++ b/TraderBuddy/src/components/Header/header.css
@@ -51,7 +51,7 @@
 
 @media only screen and (max-width:700px){
   .header {
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
   }
 
