--- a/TraderBuddy/src/components/Hero/Hero.css
+++ b/TraderBuddy/src/components/Hero/Hero.css
@@ -1,4 +1,6 @@
 .Hero {
+  max-width: 45%;
+  margin-top: 100px;
   margin-left: 200px;
   display: flex;
   flex-direction: column;
@@ -7,9 +9,11 @@
 }
 
 .page-text {
+  margin-top: 10px;
   font-size: 90px;
   font-weight: bolder;
   letter-spacing: -0.5px;
+  line-height: 1.2;
 
   span {
     background: linear-gradient(to right, #f97316, #ef4444);
@@ -19,8 +23,8 @@
 }
 
 .welcome-text {
-  button{
-    color:white;
+  button {
+    color: aliceblue;
     font-size: 20px;
     font-size: bold;
     width: 200px;
@@ -28,6 +32,6 @@
     border: none;
     border-radius: 10px;
     background: linear-gradient(to right, #f97316, #ef4444);
-        /* background-color: white; */
+    /* background-color: white; */
   }
 }
