--- a/TraderBuddy/src/components/Header/header.css
+++ b/TraderBuddy/src/components/Header/header.css
@@ -1,12 +1,13 @@
 .header {
-  margin: 10px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   color: white;
 
   .AppName {
-    margin-left: 20px;
+    margin-left: 100px;
     font-size: large;
+
     span {
       font-size: 20px;
       font-weight: bold;
@@ -19,11 +20,10 @@
 }
 
 .buttons {
-  margin-right: 25px;
+  margin-right: 220px;
   display: flex;
   background-color: #1F2229;
   justify-content: space-between;
-  /* padding: 10px 20px; */
   border-radius: 8px;
   cursor: pointer;
   width: 200px;
@@ -49,10 +49,18 @@
   }
 }
 
-@media only screen and (max-width:700px){
+@media only screen and (max-width:700px) {
   .header {
+    margin-left: 10px;
     flex-direction: row;
-    align-items: center;
+  }
+
+  .buttons {
+    margin-right: 50px;
+  }
+
+  .AppName {
+    margin-left: 0px;
   }
 
 }
