--- a/TraderBuddy/src/components/Hero/Hero.css
+++ b/TraderBuddy/src/components/Hero/Hero.css
@@ -10,7 +10,7 @@
 
 .page-text {
   margin-top: 10px;
-  font-size: 90px;
+  font-size: 55px;
   font-weight: bolder;
   letter-spacing: -0.5px;
   line-height: 1.2;
@@ -27,8 +27,8 @@
   button {
     color: aliceblue;
     font-size: 20px;
-    font-size: bold;
-    width: 200px;
+    font-weight: bold;
+    width: 220px;
     height: 50px;
     border: none;
     border-radius: 10px;
@@ -36,6 +36,7 @@
   }
 }
 
+/* media sccreen for phones */
 @media only screen and (max-width:700px) {
   .Hero {
     display: block;
@@ -48,9 +49,40 @@
     .page-text {
       font-size: 30px;
     }
-    .welcome-text{
+
+    .welcome-text {
       font-size: 15px;
     }
+    button {
+    color: aliceblue;
+    font-size: 15px;
+    font-weight: bold;
+    width: 150px;
+    height: 30px;
+    border: none;
+    border-radius: 10px;
+    background: linear-gradient(to right, #f97316, #ef4444);
+  }
   }
 
+}
+
+/* media screen for tabs */
+@media only screen and (max-width:834px) {
+  .Hero {
+    display: block;
+    max-width: 70%;
+    margin-top: 35px;
+    margin-left: 20px;
+    flex-direction: column;
+    align-items: center;
+
+    .page-text {
+      font-size: 45px;
+    }
+
+    .welcome-text {
+      font-size: 25px;
+    }
+  }
 }
